# Containerized-agent

./: .dockerignore  .gitignore  IMPROVEMENTS.md  README.md  docker-compose.yml  instructions.md  pyproject.toml  requirements.txt  setup.cfg  test_system.py
.github/workflows/: ci.yml
docs/: agent_container.md  job_manager_notes.md
frontend/: Dockerfile  index.html  note.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  JobDetails.tsx  JobForm.tsx  JobList.tsx  SkeletonLoader.tsx  SystemStats.tsx
output/test_complex_001/: result.json
output/test_complex_001/workspace/: read_data.py
output/test_data_001/: result.json
output/test_data_001/workspace/: random_numbers_processor.py
output/test_file_001/: result.json
output/test_python_001/: result.json
output/test_shell_001/: result.json
output/test_system_001/: result.json
output/test_web_001/: result.json
output/test_workflow_001/: result.json
src/: Dockerfile  __init__.py  entrypoint.sh  supervisord.conf
src/agent/: agent.py  agent_runtime.py  flow.py  job_manager.py  main.py  nodes.py  orchestrator.py
src/agent_container/: Dockerfile  __init__.py  agent_runner.py  entrypoint.sh  supervisord.conf
src/docs/: job_manager_notes.md  task.md
src/orchestrator/: Dockerfile  __init__.py  config.py
tests/: test_orchestrator.py
tests/agent/: test_agent_runner.py  test_flow.py  test_main.py  test_nodes.py  test_utils.py
tests/orchestrator/: test_job_manager.py  test_orchestrator.py  test_utils.py
(+32 files in other folders)
