[project]
name = "containerized-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.14",
    "google-genai>=1.24.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.0",
    "pocketflow>=0.0.2",
]
