[project]
name = "containerized-agent"
version = "0.1.0"
description = "A containerized agent system for automated task execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.14",
    "google-genai>=1.24.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.0",
    "pocketflow>=0.0.2",
    "pydantic>=2.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]

[project.scripts]
agent-runner = "src.agent_container.agent_runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
